[package]
name = "crates"
version = "0.0.1"
edition = "2021"

[lib]
name = "crates"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
csv = "1.3.0"
pyo3 = { version = "0.18", features = ["abi3-py311"] }
rand = "0.8.5"
regex = "1.10.4"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.10.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
