[tool.poetry]
name = "whiskyton"
version = "0.0.1"
description = "Whiskyton, find whiskies that you like!"
authors = ["Eduardo Cuducos <4732915+cuducos@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
maturin = "^1.5.1"
pyquery = "^2.0.0"
pytest-ruff = "^0.3.1"
selenium = "^4.20.0"

[tool.pytest.ini_options]
addopts = "--ruff --ruff-format"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["maturin>=1.0,<2.0", "poetry-core>=1.0.0"]
build-backend = "maturin"
